# tpmTokenDemo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainBackup.cpp  pom.xml
.github/workflows/: cmake.yml  maven.yml
Java Native Access/: tpmTokenDemo_NativeTPMInterface.cpp  tpmTokenDemo_NativeTPMInterface.h
Java Native Access/compiled-libs/: tss2-mu.lib  tss2-rc.lib  tss2-tcti-mssim.lib
Java Native Interface/: CMakeLists.txt  tpmTokenDemo_NativeTPMInterface.cpp
cppFiles/: CMakeLists.txt  main.cpp
src/main/java/logger/: Logger.java
src/main/java/tpmTokenDemo/: App.java  AppLogic.java  AppShell.java  ConfigDialog.java  LogDialog.java  NativeTPMInterface.java  TokenViewerDialog.java
